Fix bug: Squash img of subheading one

--- a/architecture-website/styles.css
+++ b/architecture-website/styles.css
@@ -2,4 +2,5 @@
 .big-ben-img {
     height: 300px;
     width: 300px;
+    object-fit: contain;
 }
